--- a/addons/gestion_equipo/views/gestion_persona_view.xml
+++ b/addons/gestion_equipo/views/gestion_persona_view.xml
@@ -6,6 +6,7 @@
         <field name="model">gestion.persona</field>
         <field name="arch" type="xml">
             <tree string="Lista de personas">
+                <field name="img" widget="image" options="{'size': [64, 64]}"/>
                 <field name="name"/>
                 <field name="lastname"/>
                 <field name="age"/>
@@ -22,6 +23,7 @@
             <form string="Formulario de persona">
                 <sheet>
                     <group>
+                        <field name="img" widget="image" class="oe_avatar"/>
                         <field name="name"/>
                         <field name="lastname"/>
                         <field name="age"/>
