--- a/addons/gestion_personal_veterinaria/views/templates.xml
+++ b/addons/gestion_personal_veterinaria/views/templates.xml
@@ -1,24 +1,70 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <data>
-<!--
-        <template id="listing">
-          <ul>
-            <li t-foreach="objects" t-as="object">
-              <a t-attf-href="#{ root }/objects/#{ object.id }">
-                <t t-esc="object.display_name"/>
-              </a>
-            </li>
-          </ul>
-        </template>
-        <template id="object">
-          <h1><t t-esc="object.display_name"/></h1>
-          <dl>
-            <t t-foreach="object._fields" t-as="field">
-              <dt><t t-esc="field"/></dt>
-              <dd><t t-esc="object[field]"/></dd>
-            </t>
-          </dl>
-        </template>
--->
-    </data>
+
+    <!-- LISTADO -->
+    <template id="web_veterinarios_list" name="Web Veterinarios List">
+        <t t-call="website.layout">
+            <div class="container mt-4">
+                <h1>Veterinarios</h1>
+
+                <div class="row">
+                    <t t-foreach="veterinarios" t-as="v">
+                        <div class="col-md-4 mb-3">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        <t t-esc="v.name"/>
+                                    </h5>
+
+                                    <p class="card-text">
+                                        <strong>Especialidad:</strong>
+                                        <t t-esc="v.specialty or 'No indicada'"/>
+                                    </p>
+
+                                    <a t-att-href="'/veterinarios/%s' % v.id" class="btn btn-primary">
+                                        Ver detalle
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </t>
+                </div>
+
+            </div>
+        </t>
+    </template>
+
+
+    <!-- DETALLE -->
+    <template id="web_veterinario_detail" name="Web Veterinario Detail">
+        <t t-call="website.layout">
+            <div class="container mt-4">
+                <h1><t t-esc="veterinario.name"/></h1>
+
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <strong>Especialidad:</strong>
+                        <t t-esc="veterinario.specialty or 'No indicada'"/>
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Teléfono:</strong>
+                        <t t-esc="veterinario.phone or '-'"/>
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Email:</strong>
+                        <t t-esc="veterinario.email or '-'"/>
+                    </li>
+                    <li class="list-group-item">
+                        <strong>Activo:</strong>
+                        <t t-esc="'Sí' if veterinario.active else 'No'"/>
+                    </li>
+                </ul>
+
+                <div class="mt-3">
+                    <a href="/veterinarios" class="btn btn-secondary">Volver</a>
+                </div>
+            </div>
+        </t>
+    </template>
+
 </odoo>
